# prs10

./: .gitignore  README.md  prs10.yaml  pyproject.toml
src/prs10/: __init__.py  __main__.py
